[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/menu/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/title_card.png" type="Texture" id=2]
[ext_resource path="res://src/scripts/scenes/title/TitleMenu.gd" type="Script" id=3]
[ext_resource path="res://src/ui/menu/Controls.tscn" type="PackedScene" id=4]

[node name="TitleMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TitleCard" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -7.51758
margin_right = 172.5
margin_bottom = 249.482
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" parent="Options" instance=ExtResource( 1 )]
margin_right = 345.0
margin_bottom = 93.0
text = "New Game"

[node name="LoadButton" parent="Options" instance=ExtResource( 1 )]
margin_top = 97.0
margin_right = 345.0
margin_bottom = 190.0
text = "Load Game"

[node name="ControlsButton" parent="Options" instance=ExtResource( 1 )]
margin_top = 194.0
margin_right = 345.0
margin_bottom = 287.0
text = "Controls"

[node name="QuitButton" parent="Options" instance=ExtResource( 1 )]
margin_top = 291.0
margin_right = 345.0
margin_bottom = 384.0
text = "Quit"

[node name="Controls" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Options/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="Options/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Options/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Options/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Controls/CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="Controls"]
